primeiras atualizações para o starter pack

--- a/.config/sway/bar.conf
+++ b/.config/sway/bar.conf
@@ -4,14 +4,15 @@ bar {
     font pango:Inter 8, Ionicons 8
 
     colors {
-        background          #141c21
-        statusline          #ffffff
-#       separator           #93a1a1
-        separator           #141c21
+        # Fundo geral da barra
+        background          #0E1A3A
+        statusline          #FFFFFF
+        separator           #0E1A3A
 
-        focused_workspace   #141c21 #2587cc #ffffff
-        active_workspace    #141c21 #2587cc #ffffff
-        inactive_workspace  #141c21 #323232 #93a1a1
-        urgent_workspace    #141c21 #d12f2c #ffffff
+        # Workspaces
+        focused_workspace   #0E1A3A #2F7BFF #FFFFFF
+        active_workspace    #0E1A3A #2F7BFF #FFFFFF
+        inactive_workspace  #0E1A3A #16285A #FFFFFF
+        urgent_workspace    #0E1A3A #FF3B3B #FFFFFF
     }
 }
