--- a/.config/sway/keybindings.conf
+++ b/.config/sway/keybindings.conf
@@ -6,8 +6,12 @@
 bindsym $mod+Return exec $term
 
 bindsym $mod+d exec dmenu_run -i -b \
--fn 'Poppins-9' -nb '#141c21' -nf '#93a1a1' \
--sb '#2587cc' -sf '#141c21'
+-fn 'Poppins-9' \
+-nb '#0E1A3A' \
+-nf '#FFFFFF' \
+-sb '#2F7BFF' \
+-sf '#FFFFFF'
+
 
 bindsym $mod+Alt+w exec firefox      # acréscimo
 bindsym $mod+Alt+e exec thunar       # acréscimo
