Refatorando padronizações dos módulos, e adicionando README.md

--- a/.config/sway/bar.conf
+++ b/.config/sway/bar.conf
@@ -5,9 +5,9 @@ bar {
 
     colors {
         # Fundo geral da barra
-        background          #0E1A3A
-        statusline          #FFFFFF
-        separator           #0E1A3A
+        background          #0E1A3A00
+        statusline          #FFFFFF00
+        separator           #0E1A3A00
 
         # Workspaces
         focused_workspace   #0E1A3A #2F7BFF #FFFFFF
